css/style.css
/* ... */
.skill_section .progress_text {
  font-size: 24px !important;
  color: #ffffff;
  font-weight: bold;
}

.portfolio_section .row .col-md-6 {
  margin: 45px 0;
}

.portfolio_section .box {
  position: relative;
  border-radius: 10px;
  overflow: hidden;
}

.portfolio_section .box.b-1, .portfolio_section .box.b-4 {
  margin-bottom: 20px;
}

.portfolio_section .box img {
  width: 100%;
}

.portfolio_section .box h4 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  width: 100%;
  text-align: center;
  color: #ffffff;
  font-weight: bold;
  font-size: 28px;
  -webkit-filter: drop-shadow(8px 3px 8px #000000);
          filter: drop-shadow(8px 3px 8px #000000);
}

.client_section .custom_heading-container {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.client_section .client_container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
}

.client_section .client_box {
  background-color: #f3f3f3;
  margin-left: 25px;
  margin-right: 25px;
  padding: 25px;
  border-radius: 20px;
}

.client_section .client_box.b-2 {
  margin-top: 135px;
}

.client_section .client_box .client-id {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
}

.client_section .client_box .client-id .img-box {
  border-radius: 10px;
  overflow: hidden;
}

.client_section .client_box .client-id .img-box img {
  width: 100%;
}

.client_section .client_box .client-id .name {
  margin-left: 10px;
}

.client_section .client_box .client-id .name h5 {
  text-transform: uppercase;
  color: #0304048c;
  font-weight: bold;
}

.client_section .client_box .detail {
  margin-top: 25px;
}

.client_section .carousel-control-prev,
.client_section .carousel-control-next {
  width: 60PX;
  height: 60PX;
  border-radius: 100%;
  top: 40%;
  background-size: 10px;
}

.client_section .carousel-control-prev {
  left: -75px;
}

.client_section .carousel-control-next {
  right: -75px;
}

.contact_section {
  background-color: #0304048c;
  color: #fff;
  background-size: cover;
  background-repeat: no-repeat;
}

.contact_section .row {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.contact_section h2 {
  margin-bottom: 45px;
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
}

.contact_section form {
  padding-right: 35px;
}

.contact_section input {
  width: 100%;
  border: 0;
  height: 50px;
  border-radius: 25px;
  margin-bottom: 25px;
  padding-left: 25px;
  background-color: #ffffff;
  border: 1px solid #bbbbbb;
  outline: none;
  color: #101010;
}

.contact_section input::-webkit-input-placeholder {
  color: #131313;
}

.contact_section input:-ms-input-placeholder {
  color: #131313;
}

.contact_section input::-ms-input-placeholder {
  color: #131313;
}

.contact_section input::placeholder {
  color: #131313;
}

.contact_section input.message-box {
  height: 120px;
}

.contact_section button {
  background-color: #fa0909;
  padding: 15px 55px;
  outline: none;
  border: none;
  border-radius: 30px;
  color: #fff;
  font-family: 'Roboto', sans-serif;
}

.contact_section button:hover {
  background-color: #cc0404;
}

.info_section {
  background-color: #201f33;
  color: #ffffff;
  font-family: 'Open Sans', sans-serif;
}

.info_section h4 {
  font-weight: bold;
  margin-bottom: 20px;
}

.info_links ul {
  padding-left: 15px;
}

.info_links ul .active::before {
  background-color: #0304048c;
}

.info_links ul li {
  list-style-type: none;
  position: relative;
}

.info_links ul li::before {
  content: "";
  left: -15px;
  top: 50%;
  position: absolute;
  width: 8px;
  height: 8px;
  background-color: #ffffff;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
}

.info_links ul li a {
  color: #ffffff;
}

.info_form input {
  width: 100%;
  border: none;
  height: 45px;
  margin-bottom: 25px;
  padding-left: 25px;
  background-color: #eaeaea;
  outline: none;
  color: #101010;
}

.info_form button {
  background-color: #0304048c;
  padding: 8px 35px;
  outline: none;
  border: none;
  border-radius: 30px;
  color: #fff;
  text-transform: uppercase;
}

.info_form button:hover {
  background-color: #0304048c;
}

.info_social .social_container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.info_social .social_container a {
  margin: 0 5px;
}

.info_social .social_container a img {
  width: 35px;
}

.info_contact > div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
}

.info_contact > div img {
  width: 20px;
  height: auto;
  margin-right: 12px;
  color: white;
}

/* footer section*/
.footer_section {
  background-color: #201f33;
  font-weight: 500;
  font-family: 'Roboto', sans-serif;
}

.footer_section p {
  border-top: 1px solid #ffffff;
  width: 60%;
  color: #ffffff;
  margin: 0 auto;
  text-align: center;
  padding: 20px 35px;
}

.footer_section a {
  color: #ffffff;
}
/*# sourceMappingURL=style.css.map */

